--- a/.github/workflows/cy.yml
+++ b/.github/workflows/cy.yml
@@ -1,24 +1,45 @@
-name: E2E Rudderstack
+name: Rudderstack E2E Automation CI
 
 on:
+  push:
+    branches: [main, master]
+  pull_request:
+    branches: [main, master]
   schedule:
-    - cron: "0 2 * * *" # Runs at 2am UTC daily
-  workflow_dispatch:
+    - cron: "0 2 * * *" # Runs daily at 2:00 AM UTC
 
 jobs:
-  test:
+  e2e:
     runs-on: ubuntu-latest
+
     env:
       RUDDERSTACK_EMAIL: ${{ secrets.RUDDERSTACK_EMAIL }}
       RUDDERSTACK_PASSWORD: ${{ secrets.RUDDERSTACK_PASSWORD }}
-      DATA_PLANE_URL: ${{ secrets.DATA_PLANE_URL }}
-      WRITE_KEY: ${{ secrets.WRITE_KEY }}
-      WEBHOOK_URL: ${{ secrets.WEBHOOK_URL }}
+      RUDDERSTACK_URL: ${{ secrets.RUDDERSTACK_URL }}
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 20
-      - run: npm ci
-      - run: npx playwright install --with-deps
-      - run: npm test
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run E2E Tests (Headless)
+        run: npm test
+
+      - name: Upload Cucumber HTML report
+        uses: actions/upload-artifact@v4
+        with:
+          name: cucumber-html-report
+          path: reports/cucumber-report.html
+
+      - name: Upload Cucumber JUnit report
+        uses: actions/upload-artifact@v4
+        with:
+          name: cucumber-junit-report
+          path: reports/cucumber-report.xml
