--- a/.github/workflows/cy.yml
+++ b/.github/workflows/cy.yml
@@ -7,6 +7,7 @@ on:
     branches: [main, master]
   schedule:
     - cron: "0 2 * * *" # Runs daily at 2:00 AM UTC
+  workflow_dispatch: # Allow manual trigger from the GitHub UI
 
 jobs:
   e2e:
@@ -28,6 +29,9 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
 
       - name: Run E2E Tests (Headless)
         run: npm test
