added and fixed hooks

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rudderstack",
   "version": "1.0.0",
   "scripts": {
-    "test": "cucumber-js --require-module ts-node/register --require src/support/hooks.ts --require src/steps/**/*.ts --format progress --format html:reports/cucumber-report.html --format junit:reports/cucumber-report.xml src/feature/**/*.feature",
+    "test": "cucumber-js --require-module ts-node/register --require src/utils/hooks.ts --require src/steps/**/*.ts --format progress --format html:reports/cucumber-report.html --format junit:reports/cucumber-report.xml src/feature/**/*.feature",
     "test:parallel": "cucumber-js --parallel 4 --require-module ts-node/register --require src/support/hooks.ts --require src/steps/**/*.ts --format progress --format html:reports/cucumber-report.html --format junit:reports/cucumber-report.xml src/feature/**/*.feature",
     "open-report": "open reports/cucumber-report.html"
   },
